<resources>
    <string name="app_name">Movie Guide</string>
    <string name="log_inbtn">Sign in</string>
    <string name="toregisactbtn">Sign Up</string>
    <string name="Registerbtn">Register</string>
    <string name="registologbtn">Back to Login</string>
    <string name="emailTv">Email</string>
    <string name="passwordTv">Password</string>
    <string name="repasswordtv">Password Again</string>
    <string name="Registertv">Create an Account</string>
    <string name="usernametv">Username</string>
    <string name="nametv">Name</string>
    <string name="surnametv">Surname</string>
    <string name="registerbtn">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>